tests/should-fail/rawcodelit-19.j
globals
integer i4 = '\
ab'//Passes, though it's invalid.
endglobals